src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Abbreviated_Name__c</fullName>
        <formula>LEFT(FirstName,1)&amp;&quot;. &quot;&amp;LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Abbreviated Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Executive_Level__c</fullName>
        <label>Account Executive Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aligned_Account_Executive__c</fullName>
        <label>Aligned Account Executive</label>
        <relationshipName>SDR</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Aligned_to_Team_Region__c</fullName>
        <inlineHelpText>Repurposing for use with CX team as well

Original: For velocity BDRs only.  This is the sales bus that the BDR is aligned to.</inlineHelpText>
        <label>Aligned to Team Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_Rulebreaker_Level_1__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Level 1 rulebreaker - allows bus driver permissions without the bus driver role assigned.</inlineHelpText>
        <label>Approved Rulebreaker Level 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_for_dashboards__c</fullName>
        <formula>Full_Name__c</formula>
        <label>Assigned (for dashboards)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Last modification was to add the &quot;Commercial Rep&quot; line to the formula - CCM_3/19</description>
        <formula>IF(OR(
CONTAINS(UserRole.Name,&quot;Enterprise Rep&quot;),
CONTAINS(UserRole.Name,&quot;Commercial Rep&quot;), 
CONTAINS(UserRole.Name,&quot;Bus Driver&quot;),
CONTAINS(UserRole.Name,&quot;Account Executive&quot;),
CONTAINS(UserRole.Name,&quot;Manager - BDR&quot;),
CONTAINS(UserRole.Name,&quot;BDR Manager&quot;),
CONTAINS(UserRole.Name,&quot;Enterprise SDR Manager&quot;),
CONTAINS(UserRole.Name,&quot;Sales Development Rep&quot;),
CONTAINS(UserRole.Name,&quot;SDR&quot;),
CONTAINS(UserRole.Name,&quot;Inside Sales Rep&quot;),
CONTAINS(UserRole.Name,&quot;Alliance Manager&quot;),
CONTAINS(UserRole.Name,&quot;Business Development Rep&quot;)),&quot;Sales&quot;,
IF(OR(
CONTAINS(UserRole.Name,&quot;Recruiting&quot;),
CONTAINS(UserRole.Name,&quot;Recruiter&quot;),
CONTAINS(UserRole.Name,&quot;Sourcer&quot;)),&quot;Recruiting&quot;,
IF(
CONTAINS(UserRole.Name,&quot;Sales Engineer&quot;),&quot;Sales Engineers&quot;,
IF(
CONTAINS(UserRole.Name,&quot;Channel&quot;),&quot;Partner Manager&quot;,
&quot;Other&quot;))))</formula>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculate_SF_Metrics__c</fullName>
        <description>Last modification was to add the &quot;Commercial Rep&quot; line - ccm_3/19</description>
        <formula>IF(
OR(
CONTAINS(User_Role_Name__c,&quot;Sales Development Rep&quot;),
CONTAINS(User_Role_Name__c,&quot;Business Development Rep&quot;),
CONTAINS(User_Role_Name__c,&quot;Enterprise Rep&quot;),
CONTAINS(User_Role_Name__c,&quot;Commercial Rep&quot;),
CONTAINS(User_Role_Name__c,&quot;Alliance&quot;),
CONTAINS(User_Role_Name__c,&quot;Account Executive&quot;),
CONTAINS(User_Role_Name__c,&quot;APAC&quot;),
CONTAINS(User_Role_Name__c,&quot;Inside Sales Rep&quot;)
),true,false)</formula>
        <label>Calculate SF Metrics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_By_for_dashboards__c</fullName>
        <formula>Full_Name__c</formula>
        <label>Created By (for dashboards)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Salesforce_Metric__c</fullName>
        <formula>Tenure_days__c/30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Salesforce Metric #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demotion_Date__c</fullName>
        <label>Demotion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_ADP_ID__c</fullName>
        <label>Employee ADP ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Participation_Points__c</fullName>
        <description>Trailing 30 Days Participation Points</description>
        <label>Employee Participation Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>File_Number__c</fullName>
        <label>File Number</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Approval_User__c</fullName>
        <label>Finance Approval User</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Approval must be from Finance.</errorMessage>
            <filterItems>
                <field>User.User_Role_Name__c</field>
                <operation>equals</operation>
                <value>CFO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <relationshipName>Finance_Approver</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName&amp;&quot; &quot;&amp;LastName</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geo_Team_Transition_Date__c</fullName>
        <label>Geo/Team Transition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Green_Circle_Password__c</fullName>
        <inlineHelpText>This field is encrypted, so no one has access to see your password.</inlineHelpText>
        <label>Green Circle Password</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Green_Circle_Username__c</fullName>
        <label>Green Circle Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Talent_Management_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Talent Management File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hashed_Green_Circle_Password__c</fullName>
        <label>Hashed Green Circle Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Junior_Role__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Junior Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>For lead score (for US reps, foreign leads show up at the top of the lead view in the morning)</description>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <formula>Manager.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Team_Bucket__c</fullName>
        <formula>IF(CONTAINS(TEXT(Team__c), &quot;EMEA Enterprise&quot;),&quot;EMEA Enterprise&quot;, 
IF(ISPICKVAL(Team__c, &quot;APAC Enterprise&quot;),&quot;APAC Enterprise&quot;, 
IF(CONTAINS(TEXT(Team__c), &quot;Enterprise&quot;), 
&quot;Enterprise&quot;,
CASE(Team__c, 
&quot;East Corporate&quot;,&quot;Corporate&quot;, 
&quot;Central Corporate&quot;,&quot;Corporate&quot;,
&quot;US Commercial East 1&quot;,&quot;US Velocity&quot;,
&quot;US Commercial East 2&quot;,&quot;US Velocity&quot;,
&quot;US Commercial East 3&quot;,&quot;US Velocity&quot;,
&quot;US Commercial West 1&quot;,&quot;US Velocity&quot;,
&quot;US Commercial West 2&quot;,&quot;US Velocity&quot;,
&quot;US Commercial West 3&quot;,&quot;US Velocity&quot;,
&quot;US Commercial West&quot;,&quot;US Velocity&quot;, 
&quot;The Wild West&quot;,&quot;Commercial&quot;, 
&quot;SEC&quot;,&quot;Commercial&quot;,
&quot;The Hunchbacks&quot;,&quot;Commercial&quot;, 
&quot;Notti by Nature&quot;,&quot;Commercial&quot;, 
&quot;Shake n Bake&quot;,&quot;Commercial&quot;, 
&quot;Closers Club&quot;,&quot;Commercial&quot;, 
&quot;The Kitchen&quot;,&quot;Commercial&quot;, 
&quot;The Pack&quot;,&quot;Commercial&quot;, 
&quot;The Pack Commercial&quot;,&quot;Commercial&quot;,
&quot;Spartans&quot;,&quot;Commercial&quot;, 
&quot;Spartans Commercial&quot;,&quot;Commercial&quot;, 
&quot;The Foundation&quot;,&quot;Commercial&quot;, 
&quot;The Foundation Commercial&quot;,&quot;Commercial&quot;,
&quot;The Methodology Commercial&quot;,&quot;Commercial&quot;, 
&quot;The Bulldogs&quot;,&quot;Corporate&quot;,
&quot;The Hounds&quot;,&quot;Commercial&quot;,
&quot;Ganas iOS&quot;,&quot;EMEA Velocity&quot;,
&quot;EMEA Inbound&quot;,&quot;EMEA Velocity&quot;,
&quot;Global Accounts US&quot;,&quot;Alliances&quot;,
&quot;Candy Time&quot;,&quot;Customer Experience&quot;,
&quot;Federal&quot;,&quot;Federal&quot;,
&quot;Xccelerators&quot;,&quot;Channel&quot;,
&quot;Wheelers and Dealers&quot;,&quot;SMB&quot;,
&quot;SalesTeam6&quot;,&quot;Commercial&quot;,
&quot;Marketing Inbound&quot;,&quot;Commercial&quot;,
&quot;Beast Coast&quot;,&quot;Commercial&quot;,
&quot;Peak Performers&quot;, &quot;Commercial&quot;,
&quot;The Green Monsters&quot;,&quot;Commercial&quot;,
&quot;West Corporate&quot;,&quot;Corporate&quot;, 
&quot;Oved Corporate&quot;,&quot;Oved&quot;,
&quot;The Green Flash&quot;,&quot;Commercial&quot;, 
&quot;Bangers n Cash&quot;,&quot;EMEA Velocity&quot;, 
&quot;E-Unit&quot;,&quot;EMEA Velocity&quot;, 
&quot;EMEA Commercial France&quot;,&quot;EMEA Velocity&quot;, 
&quot;EMEA Commercial UK&quot;,&quot;EMEA Velocity&quot;, 
&quot;Global Accounts International&quot;,&quot;EMEA Enterprise&quot;,
&quot;APAC Enterprise&quot;,&quot;APAC Enterprise&quot;,
&quot;APAC&quot;,&quot;APAC Enterprise&quot;,
&quot;The Pack Corporate&quot;,&quot;Corporate&quot;,
&quot;The Foundation Corporate&quot;,&quot;Corporate&quot;,
&quot;Spartans Corporate&quot;,&quot;Corporate&quot;,
&quot;Los Conquistadores&quot;, &quot;LATAM&quot;,
&quot;LATAM&quot;,&quot;LATAM&quot;,
&quot;Unassigned&quot;))))</formula>
        <label>Master Team Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Movement_Date__c</fullName>
        <formula>IF( 
AND( 
ISBLANK(Promotion_to_AE_Date__c), 
ISBLANK(Transition_from_BDR_AE_Bus_Driver_Date__c), 
ISBLANK(Sales_Start_Date__c), 
ISBLANK(Start_Date__c) 
), 
NULL, 
DATE(1900, 01, 01) + 
MAX( 
BLANKVALUE( 
Promotion_to_AE_Date__c, 
DATE(1900, 01, 01) 
) - DATE(1900, 01, 01), 
BLANKVALUE( 
Transition_from_BDR_AE_Bus_Driver_Date__c, 
DATE(1900, 01, 01) 
) - DATE(1900, 01, 01), 
BLANKVALUE( 
Sales_Start_Date__c, 
DATE(1900, 01, 01) 
) - DATE(1900, 01, 01), 
BLANKVALUE( 
Start_Date__c, 
DATE(1900, 01, 01) 
) - DATE(1900, 01, 01) 
) 
)</formula>
        <label>Most Recent Movement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name_for_Excel_Charts__c</fullName>
        <formula>Team_Abbreviation__c&amp;&quot; - &quot;&amp;FirstName&amp;&quot; &quot;&amp;LastName</formula>
        <label>Name for Excel Charts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_bus_SDR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to designate whether SDR is on floating bus or not</description>
        <inlineHelpText>Checkbox to designate whether SDR is on floating bus or not</inlineHelpText>
        <label>On-bus SDR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>One_user__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One (user)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_For_TVs_EMEA_BDR_HM__c</fullName>
        <formula>IF(AND(OR(CONTAINS(UserRole.Name,&quot;Business Development Rep&quot;),CONTAINS(UserRole.Name,&quot;Sales Development Rep&quot;)),ISPICKVAL(Team__c,&quot;EMEA Enterprise&quot;)),1,
IF(AND(OR(CONTAINS(UserRole.Name,&quot;Business Development Rep&quot;),CONTAINS(UserRole.Name,&quot;Sales Development Rep&quot;)),ISPICKVAL(Team__c,&quot;EMEA Commercial&quot;)),2,
IF(AND(OR(CONTAINS(UserRole.Name,&quot;Business Development Rep&quot;),CONTAINS(UserRole.Name,&quot;Sales Development Rep&quot;)),ISPICKVAL(Team__c,&quot;EMEA Inbound&quot;)),3,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order For TVs EMEA BDR HM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_for_TVs_AE_Heatmap__c</fullName>
        <formula>CASE(Team__c,
&quot;East Corporate&quot;,1,
&quot;Central Corporate&quot;,1,
&quot;Federal&quot;,1,
&quot;The Wild West&quot;,2,
&quot;The Hunchbacks&quot;,2,
&quot;SEC&quot;,2,
&quot;Green Berets&quot;,2,
&quot;Shake n Bake&quot;,2,
&quot;Notti by Nature&quot;,2,
&quot;Closers Club&quot;,2,
&quot;The Kitchen&quot;,2,
&quot;The Titans&quot;,2,
&quot;Ganas iOs&quot;,3,
&quot;E-Unit&quot;,3,
&quot;Enterprise East&quot;,4,
&quot;Enterprise East Tri-State&quot;,4,
&quot;Enterprise Central&quot;,4,
&quot;Enterprise South Central&quot;,4,
&quot;Enterprise West Ian&quot;,4,
&quot;Enterprise West Oved&quot;,4,
&quot;EMEA Enterprise&quot;,5,
&quot;Global Accounts International&quot;,5,
&quot;Global Accounts US&quot;,6,7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order for TVs AE Heatmap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_for_TVs_BDR_HM__c</fullName>
        <formula>IF(AND(OR(CONTAINS(UserRole.Name,&quot;Business Development Rep&quot;),CONTAINS(UserRole.Name,&quot;Sales Development Rep&quot;)),CONTAINS(UserRole.Name,&quot;Global&quot;),ISPICKVAL(Team__c,&quot;Alliances&quot;)),1, 
IF(AND(OR(CONTAINS(UserRole.Name,&quot;Business Development Rep&quot;),CONTAINS(UserRole.Name,&quot;Sales Development Rep&quot;),CONTAINS(UserRole.Name,&quot;Sales Rep&quot;)),OR(CONTAINS(UserRole.Name,&quot;US Enterprise&quot;),CONTAINS(UserRole.Name,&quot;Enterprise East&quot;),CONTAINS(UserRole.Name,&quot;Inside Sales Rep&quot;))),2, 
IF(AND(OR(CONTAINS(UserRole.Name,&quot;Business Development Rep&quot;),CONTAINS(UserRole.Name,&quot;Sales Development Rep&quot;)),CONTAINS( UserRole.Name,&quot;Corporate&quot;)),3, 
IF(AND(OR(CONTAINS(UserRole.Name,&quot;Business Development Rep&quot;),CONTAINS(UserRole.Name,&quot;Sales Development Rep&quot;)),CONTAINS( UserRole.Name,&quot;Commercial&quot;)),4, 
IF(AND(OR(CONTAINS(UserRole.Name,&quot;Business Development Rep&quot;), CONTAINS(UserRole.Name,&quot;Sales Development Rep&quot;)),ISPICKVAL ( Team__c,&quot;&quot;)),0, 
IF(AND(OR(CONTAINS(UserRole.Name,&quot;Business Development Rep&quot;),CONTAINS(UserRole.Name,&quot;Sales Development Rep&quot;)),ISPICKVAL( Team__c,&quot;Los Conquistadores&quot;)),5, 
IF(AND(OR(CONTAINS(UserRole.Name,&quot;Business Development Rep&quot;),CONTAINS(UserRole.Name,&quot;Sales Development Rep&quot;)),ISPICKVAL ( Team__c,&quot;Ganas iOS&quot;)),6, 
IF(AND(OR(CONTAINS(UserRole.Name,&quot;Business Development Rep&quot;),CONTAINS(UserRole.Name,&quot;Sales Development Rep&quot;)),OR(ISPICKVAL( Team__c,&quot;EMEA Enterprise&quot;),ISPICKVAL(Team__c,&quot;Global Accounts International&quot;))),7, 
IF(AND(OR(CONTAINS(UserRole.Name,&quot;Business Development Rep&quot;),CONTAINS(UserRole.Name,&quot;Sales Development Rep&quot;)),ISPICKVAL( Team__c,&quot;EMEA Inbound&quot;)),8 ,
IF(AND(OR(CONTAINS(UserRole.Name,&quot;Business Development Rep&quot;),CONTAINS(UserRole.Name,&quot;Sales Development Rep&quot;)),ISPICKVAL( Team__c,&quot;Xccelerators&quot;)),9, 
IF(AND(CONTAINS(UserRole.Name,&quot;Business Development Rep&quot;),ISPICKVAL( Location__c,&quot;United States&quot;)),10
,0)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order for TVs BDR HM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_for_TVs_Channel__c</fullName>
        <formula>IF(CONTAINS(UserRole.Name,&quot;Channel Manager&quot;),1,
IF(CONTAINS(UserRole.Name,&quot;Channel Regional Director&quot;),2,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order for TVs Channel</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_for_TVs_Recruiting__c</fullName>
        <formula>IF(CONTAINS(UserRole.Name,&quot;Sourcer&quot;),1, 
IF(ISPICKVAL( Recruiting_Team__c ,&quot;Inbound US&quot;),3,
IF(AND(UserRole.Name=&quot;BDR Recruiter&quot;,ISPICKVAL(Team__c,&quot;Recruiting&quot;)) ,2,
IF(ISPICKVAL( Recruiting_Team__c ,&quot;Experienced&quot;),4,
IF(CONTAINS(UserRole.Name,&quot;AE Recruiter&quot;),5, 
IF(CONTAINS(UserRole.Name,&quot;Tech Recruiter&quot;),6, 
0))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order for TVs Recruiting</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_for_TVs__c</fullName>
        <description>Structure should match &quot;Role Bucket for TVs&quot;</description>
        <formula>IF(AND(CONTAINS(UserRole.Name,&quot;Business Development Rep&quot;),CONTAINS(UserRole.Name,&quot;Enterprise&quot;)),1, 
IF(CONTAINS(UserRole.Name,&quot;Business Development Rep&quot;),1, 
IF(CONTAINS(UserRole.Name,&quot;Sales Development Rep&quot;),1, 
IF(AND(OR(ISPICKVAL(Team__c,&quot;Global Accounts US&quot;),ISPICKVAL(Team__c,&quot;Global Accounts International&quot;)),NOT(CONTAINS(UserRole.Name,&quot;Engineer&quot;))),5,  
IF(OR(CONTAINS(UserRole.Name,&quot;Corporate Account Executive&quot;),CONTAINS(UserRole.Name,&quot;Federal Account Executive&quot;)),3,
IF(CONTAINS(UserRole.Name,&quot;Account Executive&quot;),2,
IF(CONTAINS(UserRole.Name,&quot;Enterprise Rep&quot;),4, 
0)))))))</formula>
        <label>Order for TVs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_KBDR_Promotion_Date__c</fullName>
        <label>Original KBDR Promotion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promotion_to_AE_Date__c</fullName>
        <label>Promotion to AE Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promotion_to_Bus_Driver_Date__c</fullName>
        <label>Promotion to Bus Driver Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promotion_to_Key_BDR_Date__c</fullName>
        <label>Promotion to Key BDR Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promotion_to_Recruiter_Date__c</fullName>
        <label>Promotion to Recruiter Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promotion_to_SDR_Date__c</fullName>
        <label>Promotion to SDR Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promotion_to_Sourcer_Date__c</fullName>
        <label>Promotion to Sourcer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recruiting_Team__c</fullName>
        <label>Recruiting Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ring of Hire</fullName>
                </value>
                <value>
                    <fullName>Saved by the Bell</fullName>
                </value>
                <value>
                    <fullName>U Crew</fullName>
                </value>
                <value>
                    <fullName>Inbound US</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Experienced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_Bucket_for_TVs__c</fullName>
        <formula>IF(CONTAINS(User_Role_Name__c,&quot;Channel Regional Director&quot;),&quot;Chl Dir&quot;,
IF(CONTAINS(User_Role_Name__c,&quot;Channel Manager&quot;),&quot;Chl Mgr&quot;,
IF(CONTAINS(User_Role_Name__c,&quot;Inside Sales Rep&quot;),&quot;Ent BDR&quot;,
IF(AND(OR(CONTAINS(User_Role_Name__c,&quot;Business Development Rep&quot;),CONTAINS(User_Role_Name__c,&quot;Sales Development Rep&quot;)),CONTAINS(User_Role_Name__c,&quot;Enterprise&quot;)),&quot;Ent BDR&quot;,
IF(AND(OR(CONTAINS(User_Role_Name__c,&quot;Business Development Rep&quot;),CONTAINS(User_Role_Name__c,&quot;Sales Development Rep&quot;)),CONTAINS(User_Role_Name__c,&quot;Global&quot;)),&quot;Global BDR&quot;,
IF(AND(CONTAINS(User_Role_Name__c,&quot;Business Development Rep&quot;), ISPICKVAL(Location__c ,&quot;International&quot;)),&quot;EMEA Vel BDR&quot;,
if(and(contains(User_Role_Name__c,&quot;Sales Development Rep&quot;), ISPICKVAL(Team__c,&quot;The Pipelime&quot;)),&quot;EMEA Vel BDR&quot;,
IF(AND(CONTAINS(User_Role_Name__c,&quot;Sales Development Rep&quot;), ISPICKVAL(Location__c ,&quot;International&quot;)),&quot;Jr. AE&quot;,
IF(OR(CONTAINS(User_Role_Name__c,&quot;Business Development Rep&quot;),CONTAINS(User_Role_Name__c,&quot;Sales Development Rep&quot;)),&quot;Vel BDR&quot;,
IF(AND(CONTAINS(User_Role_Name__c,&quot;Account Executive&quot;),Junior_Role__c=TRUE),&quot;Jr. AE&quot;,
IF(CONTAINS(User_Role_Name__c,&quot;Corporate Account&quot;),&quot;Sr. AE&quot;,
IF(CONTAINS(User_Role_Name__c,&quot;Account Executive&quot;),&quot;AE&quot;,
IF(CONTAINS(User_Role_Name__c,&quot;Bus Driver&quot;),&quot;Bus Driver&quot;,
IF(CONTAINS(User_Role_Name__c,&quot;Enterprise Rep&quot;),&quot;Ent Rep&quot;,
IF(ISPICKVAL(Recruiting_Team__c,&quot;Inbound US&quot;),&quot;Inbound BDR Recruiter&quot;, 
IF(CONTAINS(User_Role_Name__c,&quot;Recruiter Experienced&quot;),&quot;Experienced Recruiter&quot;,
IF(CONTAINS(User_Role_Name__c,&quot;AE Recruiter&quot;),&quot;AE Recruiter&quot;,
IF(CONTAINS(User_Role_Name__c,&quot;Tech Recruiter&quot;),&quot;Technical Recruiter&quot;,
IF(CONTAINS(User_Role_Name__c,&quot;Recruiter&quot;),&quot;BDR Recruiter&quot;,
IF(CONTAINS(User_Role_Name__c,&quot;BDR Sourcer&quot;),&quot;BDR Sourcer&quot;,
User_Role_Name__c))))))))))))))))))))</formula>
        <label>Role Bucket for TVs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Buckets__c</fullName>
        <formula>IF(CONTAINS(LOWER(UserRole.Name),&quot;key account&quot;),&quot;KBDR&quot;,
IF(CONTAINS(LOWER(UserRole.Name),&quot;business development rep&quot;),&quot;BDR&quot;,
IF(CONTAINS(LOWER(UserRole.Name),&quot;sales development rep&quot;),&quot;SDR&quot;,
IF(CONTAINS(LOWER(UserRole.Name),&quot;account executive&quot;),&quot;AE&quot;,
IF(CONTAINS(LOWER(UserRole.Name),&quot;inside sales rep&quot;),&quot;ISR&quot;,
IF(CONTAINS(LOWER(UserRole.Name),&quot;sales rep&quot;),&quot;AE&quot;,
IF(CONTAINS(LOWER(UserRole.Name),&quot;channel manager&quot;),&quot;AE&quot;,
IF(CONTAINS(LOWER(UserRole.Name),&quot;account executive&quot;),&quot;Global AE&quot;,
IF(CONTAINS(LOWER(UserRole.Name),&quot;enterprise rep&quot;),&quot;Ent Rep&quot;,
IF(CONTAINS(LOWER(UserRole.Name),&quot;sales engineer&quot;),&quot;SE&quot;,
IF(CONTAINS(LOWER(UserRole.Name),&quot;regional director&quot;),&quot;Bus Driver&quot;,
IF(CONTAINS(LOWER(UserRole.Name),&quot;bus driver&quot;),&quot;Bus Driver&quot;,&quot;Other&quot;))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role Buckets</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Type_for_Resourcing__c</fullName>
        <formula>IF( CONTAINS( UserRole.Name , &quot;key&quot;),&quot;KBDR&quot;,if(or(CONTAINS(UserRole.Name,&quot;Account Executive&quot;),contains(UserRole.Name,&quot;Enterprise Rep&quot;)),&quot;AE&quot;,if(contains(UserRole.Name,&quot;Business Development&quot;),&quot;BDR&quot;,
if(not(contains(UserRole.Name,&quot;Marketing&quot;)),&quot;BDR&quot;,&quot;-&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role Type for Resourcing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_formula__c</fullName>
        <formula>$UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role (formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultProductLookupTab__c</fullName>
        <description>Default tab for this user in Product Lookup page.</description>
        <inlineHelpText>Customize default tab in Product Lookup page.</inlineHelpText>
        <label>Default Product Lookup Tab</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Guided Selling</fullName>
                    <default>true</default>
                    <label>Guided Selling</label>
                </value>
                <value>
                    <fullName>Search Filters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DiagnosticToolEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable to run pricing diagnostics during a Quote Line Editor Calculate.</description>
        <inlineHelpText>Use to enable CPQ Diagnostic Tool, only available if org setting is enabled. Contact support to enable this capability.</inlineHelpText>
        <label>Enable Diagnostic Tool</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__OutputFormatChangeAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates whether this user is allowed to change output format of quote documents.</description>
        <inlineHelpText>Check to allow this user to change output format of quote documents.</inlineHelpText>
        <label>Allow Output Format Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductSortPreference__c</fullName>
        <description>Product sort preference for this user. Currently only Chatter Follows are supported.</description>
        <inlineHelpText>Select &quot;Followed&quot; to display products you follow in Chatter before others when adding to quote.</inlineHelpText>
        <label>Product Sort Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Followed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ResetProductLookup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether Product Lookup data (guided selling questions, search filters and search results) are cleared after user selects desired products.</description>
        <inlineHelpText>Check to clear search filters and results every time you add products to your quotes. Otherwise, your previous selections are kept.</inlineHelpText>
        <label>Reset Product Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Theme__c</fullName>
        <description>Field that will be set by Select Theme custom link, once one is selected.</description>
        <label>Theme</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Roles_Bucketed__c</fullName>
        <description>Last modification was to add the &quot;Commercial Rep&quot; line to the formula - CCM_3/19</description>
        <formula>IF(CONTAINS(UserRole.Name,&quot;Enterprise Rep&quot;),&quot;Ent Rep &quot;,
IF(CONTAINS(UserRole.Name,&quot;Commercial Rep&quot;),&quot;Comm Rep &quot;,

IF(OR(CONTAINS(UserRole.Name,&quot;Bus Driver&quot;),CONTAINS(UserRole.Name,&quot;Director of Channels&quot;)),&quot;Bus Driver &quot;,

IF(CONTAINS(UserRole.Name,&quot;Manager - BDR&quot;),&quot;SDM &quot;,
IF(CONTAINS(UserRole.Name,&quot;BDR Manager&quot;),&quot;SDM &quot;,
IF(CONTAINS(UserRole.Name,&quot;Enterprise SDR Manager&quot;),&quot;SDM &quot;,

IF(CONTAINS(UserRole.Name,&quot;Account Executive&quot;),&quot;Account Executive &quot;,

IF(OR(CONTAINS(UserRole.Name,&quot;Channel Manager&quot;),CONTAINS(UserRole.Name,&quot;Channel Regional Director&quot;)),&quot;Partner Manager &quot;,

IF(CONTAINS(UserRole.Name,&quot;Sales Engineer&quot;),&quot;Sales Engineer &quot;,

IF(CONTAINS(UserRole.Name,&quot;Alliance Manager&quot;),&quot;Alliances &quot;,

IF(CONTAINS(UserRole.Name,&quot;Inside Sales Rep&quot;),&quot;Sales Development Rep &quot;,
IF(CONTAINS(UserRole.Name,&quot;Sales Development Rep&quot;),&quot;Sales Development Rep &quot;,

IF(CONTAINS(UserRole.Name,&quot;Business Development Rep&quot;),&quot;Business Development Rep &quot;,&quot;&quot;)))))))))))))
&amp;
CASE(Team__c,
&quot;Notti By Nature&quot;,&quot;East&quot;,
&quot;Closers Club&quot;,&quot;East&quot;,
&quot;Spartans Commercial&quot;,&quot;East&quot;,
&quot;The Methodology Commercial&quot;,&quot;East&quot;,

&quot;Shake and Bake&quot;,&quot;Central&quot;,
&quot;The Kitchen&quot;,&quot;Central&quot;,
&quot;SEC&quot;,&quot;Central&quot;,


&quot;The Wild West&quot;,&quot;West&quot;,
&quot;The Hunchbacks&quot;,&quot;West&quot;,
&quot;The Titans&quot;,&quot;West&quot;,
&quot;The Pack Commercial&quot;,&quot;West&quot;,


&quot;Ganas iOS&quot;,&quot;EMEA&quot;,
&quot;Enterprise East&quot;,&quot;Enterprise&quot;,
&quot;Enterprise Central&quot;,&quot;Enterprise&quot;,
&quot;Enterprise West Ian&quot;,&quot;Enterprise&quot;,
&quot;Enterprise West Oved&quot;,&quot;Enterprise&quot;,
&quot;EMEA Enterprise&quot;,&quot;EMEA Enterprise&quot;,
&quot;Enterprise SDR&quot;,&quot;Enterprise&quot;,
&quot;Global Accounts US&quot;,&quot;Globals US&quot;,
&quot;Global Accounts International&quot;,&quot;Globals EMEA&quot;,&quot;&quot;)</formula>
        <label>Sales Roles Bucketed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Start_Date__c</fullName>
        <label>Sales Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Team_Abbreviation__c</fullName>
        <formula>CASE(Team__c,
&quot;International&quot;,&quot;Int&apos;l&quot;,
&quot;Rise and Grind&quot;,&quot;R&amp;G&quot;,
&quot;Channel Sharks&quot;,&quot;CS&quot;,
&quot;Strategic Service Providers&quot;,&quot;SSP&quot;,
&quot;Bernie Hannon&quot;,&quot;BH&quot;,
&quot;Gravy Train&quot;,&quot;GT&quot;,

&quot;The Minutemen&quot;,&quot;MM&quot;,
&quot;Virtual Empire&quot;,&quot;VE&quot;,
&quot;The Green Monsters&quot;,&quot;GM&quot;,
&quot;Beast Coast&quot;,&quot;BC&quot;,
&quot;Intimidators&quot;,&quot;INT&quot;,
&quot;VManifest Destiny&quot;,&quot;VMD&quot;,
&quot;Mount Crushmore&quot;,&quot;MC&quot;,
&quot;Pipeline Pitbulls&quot;,&quot;PPB&quot;,
&quot;Bangers n Cash&quot;,&quot;BNC&quot;,
&quot;US Enterprise&quot;,&quot;ENT&quot;,
&quot;Global Accounts&quot;,&quot;GLB&quot;,
&quot;Peak Performers&quot;,&quot;PPF&quot;,
&quot;The Green Flash&quot;,&quot;GF&quot;,
&quot;Xccelerators&quot;,&quot;XCL&quot;,
&quot;Wheelers and Dealers&quot;,&quot;WND&quot;,
&quot;Recruiting&quot;,&quot;RCT&quot;,
&quot;Recruiting: Special&quot;,&quot;RCSP&quot;,
&quot;N/A&quot;)</formula>
        <label>Team Abbreviation</label>
        <type>Text</type>
    </fields>
</CustomObject>